Globally changed structure and entities of the project